deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:19.0.3
        args: ["start"]
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          initialDelaySeconds: 60
          timeoutSeconds: 10
          periodSeconds: 60
          httpGet:
            path: /realms/master
            port: 8080
